# rivet-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  design.md  report_chatty.html  rivet_test_report_prd.md
.cargo/: config.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  deb.yml  dependabot-auto.yml  homebrew-bump.yml  release.yml  winget.yml  workflow-lint.yml
data/: posts.csv  status-codes.csv  users-test-data.csv
envs/: production.env  staging.env  test.env
examples/: simple-request.rivet.yaml
examples/graphql/: README.md  ecommerce.rivet.yaml  error-handling.rivet.yaml  users.rivet.yaml
packaging/apt/: README.md
packaging/assets/man/: rivet.1
packaging/homebrew/: Formula.template.rb  rivet.rb
packaging/winget/: README.md
scripts/: check.sh  install-git-hooks.sh  release.sh
src/: config.rs  grpc.rs  http.rs  lib.rs  main.rs  report.rs  utils.rs
src/commands/: coverage.rs  gen.rs  grpc.rs  import.rs  mod.rs  perf.rs  run.rs  send.rs
src/performance/: metrics.rs  mod.rs  monitor.rs  patterns.rs  runner.rs
src/runner/: assertions.rs  data.rs  executor.rs  mod.rs  parser.rs  test_runner.rs  variables.rs
src/ui/: mod.rs  progress.rs  request_box.rs  response_box.rs  spinner.rs
templates/: report.html  report_chatty.html  report_compact.html  report_detailed.html  report_simple.html  report_working.html
test_auth0_import/: rivet.yaml
test_auth0_import/db_connections/: db_connections_ask_to_change_a_password_for_a_given_user.yaml  db_connections_signup_using_a_username_password.yaml
test_auth0_import/get_access_token/: get_access_token_authorization_code.yaml  get_access_token_authorization_code__pkce.yaml  get_access_token_client_credentials.yaml  get_access_token_refresh_token.yaml  get_access_token_resource_owner_password.yaml  (+1 more)
test_github_api_gen/: actions_add-custom-labels-to-self-hosted-runner-for-org.yaml  actions_add-custom-labels-to-self-hosted-runner-for-repo.yaml  actions_add-repo-access-to-self-hosted-runner-group-in-org.yaml  actions_add-selected-repo-to-org-secret.yaml  actions_add-selected-repo-to-org-variable.yaml  actions_add-self-hosted-runner-to-group-for-org.yaml  actions_approve-workflow-run.yaml  actions_cancel-workflow-run.yaml  actions_create-environment-variable.yaml  actions_create-hosted-runner-for-org.yaml  actions_create-or-update-environment-secret.yaml  actions_create-or-update-org-secret.yaml  actions_create-or-update-repo-secret.yaml  actions_create-org-variable.yaml  actions_create-registration-token-for-org.yaml  actions_create-registration-token-for-repo.yaml  actions_create-remove-token-for-org.yaml  actions_create-remove-token-for-repo.yaml  actions_create-repo-variable.yaml  actions_create-self-hosted-runner-group-for-org.yaml  actions_create-workflow-dispatch.yaml  actions_delete-actions-cache-by-id.yaml  actions_delete-actions-cache-by-key.yaml  actions_delete-artifact.yaml  actions_delete-environment-secret.yaml  actions_delete-environment-variable.yaml  actions_delete-hosted-runner-for-org.yaml  actions_delete-org-secret.yaml  actions_delete-org-variable.yaml  actions_delete-repo-secret.yaml  actions_delete-repo-variable.yaml  actions_delete-self-hosted-runner-from-org.yaml  actions_delete-self-hosted-runner-from-repo.yaml  actions_delete-self-hosted-runner-group-from-org.yaml  actions_delete-workflow-run-logs.yaml  actions_delete-workflow-run.yaml  actions_disable-selected-repository-github-actions-organization.yaml  actions_disable-selected-repository-self-hosted-runners-organization.yaml  actions_disable-workflow.yaml  actions_download-artifact.yaml  (+1024 more)
tests/: api-smoke-test.rivet.yaml  content-types.rivet.yaml  error-scenarios.rivet.yaml  gen_tests.rs  grpc_integration_tests.rs  grpc_tests.rs  import_tests.rs  performance_tests.rs  real_world_integration_tests.rs  stress_edge_case_tests.rs
tests_files/: README.md  basic-api.rivet.yaml  example.rivet.yaml  status-codes.rivet.yaml  users-api.rivet.yaml
xtask/src/: main.rs
(+20 files in other folders)
