[package]
name = "rivet"
version = "0.1.0"
edition = "2021"
description = "API testing that lives in git"
license = "MIT"
repository = "https://github.com/szabadkai/rivet-cli"
keywords = ["api", "testing", "cli", "http", "grpc"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "rivet"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
hyper-rustls = "0.24"

# gRPC
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# JSON/YAML processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# JSONPath and schema validation
jsonpath-rust = "0.3"
jsonschema = "0.17"

# OpenAPI
openapiv3 = "2.0"

# Terminal UI and colors
crossterm = "0.27"
indicatif = "0.17"
owo-colors = "4.0"
atty = "0.2"

# Templating for HTML reports
tera = "1.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File handling
walkdir = "2.4"

# CSV handling
csv = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP/URL parsing
url = "2.4"

# Regular expressions
regex = "1.10"