[package]
name = "rivet"
version = "0.1.0"
edition = "2021"
description = "API testing that lives in git"
license = "MIT"
repository = "https://github.com/szabadkai/rivet-cli"
keywords = ["api", "testing", "cli", "http", "grpc"]
categories = ["command-line-utilities", "development-tools::testing"]

[lib]
name = "rivet"
path = "src/lib.rs"

[[bin]]
name = "rivet"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }
clap_complete = "4.5"
clap_mangen = "0.2"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
hyper-rustls = "0.27"

# gRPC
tonic = { version = "0.10", features = ["tls", "transport"] }
prost = "0.12"
prost-types = "0.12"
tonic-reflection = "0.10"

# Proto compilation
prost-build = "0.12"
tonic-build = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# JSON/YAML processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# JSONPath and schema validation
jsonpath-rust = "0.3"
jsonschema = "0.17"

# OpenAPI and API imports
openapiv3 = "2.0"
uuid = { version = "1.0", features = ["v4"] }

# Terminal UI and colors
crossterm = "0.27"
indicatif = "0.17"
owo-colors = "4.0"
atty = "0.2"

# Templating for HTML reports
tera = "1.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File handling
walkdir = "2.4"
tempfile = "3.8"

# CSV handling
csv = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP/URL parsing
url = "2.4"

# Regular expressions
regex = "1.10"

# IndexMap for ordered maps
indexmap = "2.0"

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
# HTTP client for integration tests (reqwest is already a main dependency)

[package.metadata.deb]
# Package name for Debian/Ubuntu (avoid collisions with other 'rivet')
name = "rivet-cli"
# Update before publishing
maintainer = "Levente Szabadkai <levente@szabadkai.com>"
section = "utils"
priority = "optional"
# Use crate description/license/repository from [package]
# Install the compiled binary to /usr/bin and include shell completions and man page
assets = [
    ["target/release/rivet", "/usr/bin/rivet", "755"],
    ["packaging/assets/completions/rivet.bash", "/usr/share/bash-completion/completions/rivet", "644"],
    ["packaging/assets/completions/_rivet", "/usr/share/zsh/vendor-completions/_rivet", "644"],
    ["packaging/assets/completions/rivet.fish", "/usr/share/fish/vendor_completions.d/rivet.fish", "644"],
    ["packaging/assets/man/rivet.1", "/usr/share/man/man1/rivet.1", "644"],
]
